pesel i hasło working version

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <meta charset="UTF-8" />
     <script src="/build/mycomponent.js"></script>
-</head>
-
-<body>
-    <cap-pesel></cap-pesel>
-    <input type="text" />
-</body>
+  </head>
+  <body>
+    <cap-auth> </cap-auth>
+    <!-- <cap-pesel label="PESEL:"></cap-pesel>
+    <cap-password label="Hasło:" show-password></cap-password> -->
+  </body>
 </html>
