new components and ongoing refactor

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html >
   <head>
     <meta charset="UTF-8" />
     <script type="module" src="/build/mycomponent.esm.js"></script>
     <script nomodule src="/build/mycomponent.js"></script>
+    <link rel="stylesheet" type="text/css" href="global/variables.css">
   </head>
   <body>
-    <push-button></push-button>
-    <!-- <cap-password> </cap-password> -->
-    <!-- <cap-pesel label="PESEL:"></cap-pesel> -->
-    <!-- <cap-password label="Hasło:" show-password></cap-password> -->
+    <cap-pesel></cap-pesel>
+    <cap-password></cap-password>
+    <cap-button>Zaloguj</cap-button>
   </body>
 </html>
