--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" type="text/css" href="global/variables.css">
   </head>
   <body>
-    <cap-pesel></cap-pesel>
-    <cap-password></cap-password>
-    <cap-button>Zaloguj</cap-button>
+    <cap-auth></cap-auth>
   </body>
 </html>
