--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html >
   <head>
     <meta charset="UTF-8" />
-    <script type="module" src="/build/mycomponent.esm.js"></script>
-    <script nomodule src="/build/mycomponent.js"></script>
-    <link rel="stylesheet" type="text/css" href="global/variables.css">
+    <script type="module" src="/build/capauth.esm.js"></script>
+    <script nomodule src="/build/capauth.js"></script>
+    <link rel="stylesheet" type="text/css" href="/build/capauth.css">
   </head>
   <body>
     <cap-auth></cap-auth>
